# KC868-A16

./: CMakeLists.txt  README.md
components/ethernet_manager/: CMakeLists.txt  EthernetManager.cpp
components/ethernet_manager/include/: EthernetManager.h
components/i2c_manager/: CMakeLists.txt  i2c_manager.cpp
components/i2c_manager/include/: i2c_manager.h
components/kc868a16/: CMakeLists.txt  KC868A16.cpp
components/kc868a16/include/: KC868A16.h
components/pcf8574/: CMakeLists.txt  PCF8574.cpp
components/pcf8574/include/: PCF8574.h
components/uart_manager/: CMakeLists.txt  UartManager.cpp
components/uart_manager/include/: UartManager.h
components/wifi_manager/: CMakeLists.txt  WiFiManager.cpp
components/wifi_manager/include/: WiFiManager.h
main/: CMakeLists.txt  EthernetManager.cpp  EthernetManager.h  I2CManager.cpp  I2CManager.h  KC868A16.cpp  KC868A16.h  PCF8574.cpp  PCF8574.h  UartManager.cpp  UartManager.h  WiFiManager.cpp  WiFiManager.h  main.cpp
