idf_component_register(
    SRCS
        "main.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        freertos
        esp_wifi
        nvs_flash
        esp_http_server
        driver
        esp_netif
        esp_timer
        json
        esp_eth
        i2c_manager
        kc868a16
        ethernet_manager
        pcf8574
        uart_manager
        wifi_manager
)
